--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "dd",
+  "name": "dswd",
   "version": "1.0.0",
   "description": "",
-  "author": "Toshiki Izumi",
+  "author": "dswd",
   "license": "",
   "devDependencies": {
-    "gulp": "^3.8.11",
-    "gulp-sass": "~1.3.3",
-    "gulp-concat": "~2.4.3",
-    "gulp-uglify": "~1.1.0",
-    "browser-sync": "~2.0.1",
-    "gulp-pleeease": "~1.1.0"
+    "browser-sync": "latest",
+    "gulp": "latest",
+    "gulp-concat": "latest",
+    "gulp-pleeease": "latest",
+    "gulp-sass": "latest",
+    "gulp-uglify": "latest"
+  },
+  "scripts": {
+    "gulp": "gulp"
   }
 }
